<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UploadMission">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:id="@+id/toolbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/uavConnection"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingRight="32dp"
        android:paddingLeft="32dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/selectConnectionType"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:entries="@array/drone_connection_types"
            android:spinnerMode="dropdown" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnConnect"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:onClick="BtnConnect"
            android:text="@string/Connect" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ConnectionTextView"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/noConnection"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:id="@+id/btnUploadMission"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:text="@string/sendMission"
        android:onClick="MissionUpload"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnPreFlight"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:text="@string/pre_flight"
            android:onClick="startChecks"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/btn_calibrate"
            android:visibility="invisible"
            android:text="Calibrate"
            android:onClick="startCalibration"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:id="@+id/btnTelemetry"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:text="@string/proceedToMission"
        android:onClick="startMissionTracker"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>