<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MissionPlanning">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:id="@+id/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingRight="32dp"
        android:paddingLeft="32dp"
        android:orientation="vertical">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/Flight_Path_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:onClick="openFlightPath"
            android:text="@string/setFlightPath"
            android:textSize="24sp" />


        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/Download_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:onClick="openDownload"
            android:text="@string/downlaodFlightPath"
            android:textSize="24sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/Edit_Flight_Path_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:onClick="editFlightPath"
            android:text="@string/verifyFlightPath"
            android:textSize="24sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/Upload_Mission_button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:onClick="uploadMission"
            android:text="@string/uploadMission"
            android:textSize="24sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>